shortening Array.asList lists