@@ -8,7 +8,6 @@ import cz.fb.manaus.reactor.ReactorTestFactory;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -25,15 +24,15 @@ public class ProbabilityCalculatorTest extends AbstractLocalTestCase {
 
     @Test
     public void testFromFairness() throws Exception {
-        checkProbability(Arrays.asList(0.6, 0.25, 0.15));
-        checkProbability(Arrays.asList(0.4, 0.3, 0.3));
-        checkProbability(Arrays.asList(0.6, 0.4));
-        checkProbability(Arrays.asList(0.6, 0.2, 0.1, 0.1));
-        checkProbability(Arrays.asList(0.9, 0.1));
+        checkProbability(List.of(0.6, 0.25, 0.15));
+        checkProbability(List.of(0.4, 0.3, 0.3));
+        checkProbability(List.of(0.6, 0.4));
+        checkProbability(List.of(0.6, 0.2, 0.1, 0.1));
+        checkProbability(List.of(0.9, 0.1));
     }
 
     private void checkProbability(List<Double> probabilities) {
-        List<Double> rates = Arrays.asList(0.05, 0.1, 0.2, 0.4);
+        List<Double> rates = List.of(0.05, 0.1, 0.2, 0.4);
         for (double rate : rates) {
             MarketPrices prices = factory.createMarket(rate, probabilities);
             Fairness fairness = fairnessPolynomialCalculator.getFairness(prices);
